--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     Document Title
     =============================================
     -->
-    <title>Titan | Multipurpose HTML5 Template</title>
+    <title>이규량 | Multipurpose HTML5 Template</title>
     <!--  
     Favicons
     =============================================
