--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <meta name="author" content="">
 
     <link rel="shortcut icon" href="img/favicon.ico">
-    <title>포트폴리오</title>
+    <title>Profile Bootstrap Theme</title>
 
     <!-- Global stylesheets -->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
