--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                               <i class="fa fa-search-plus fa-3x"></i>
                           </div>
                       </div>
-                      <img class="img-fluid" src="img/portfolio/p-7.jpg" alt="">
+                      <img class="img-fluid" src="img/portfolio/p-7.png" alt="">
                   </a>
               </div>
               <div class="col-sm-4 portfolio-item filter consulting">
