--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 
           </div>
           <div class="row my-auto">
-              <div class="col-sm-4 portfolio-item filter finance">
+              <div stlye="text-center: center;" class="col-sm-4 portfolio-item filter finance">
+                <p >블로그</p>
                   <a class="portfolio-link" href="#portfolioModal4" data-toggle="modal">
                       <div class="caption-port">
                           <div class="caption-port-content">
@@ -249,27 +250,30 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                       <img class="img-fluid" src="img/portfolio/p-6.png" alt="">
                   </a>
               </div>
-              <div class="col-sm-4 portfolio-item filter marketing">
-                  <a class="portfolio-link" href="#portfolioModal5" data-toggle="modal">
-                      <div class="caption-port">
-                          <div class="caption-port-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img class="img-fluid" src="img/portfolio/p-5.png" alt="">
-                  </a>
-              </div>
               <div class="col-sm-4 portfolio-item filter consulting">
-                  <a class="portfolio-link" href="#portfolioModal6" data-toggle="modal">
-                      <div class="caption-port">
-                          <div class="caption-port-content">
-                              <i class="fa fa-search-plus fa-3x"></i>
-                          </div>
-                      </div>
-                      <img class="img-fluid" src="img/portfolio/p-9.png" alt="">
-                  </a>
-              </div>              
+                <p>사킬라</p>
+                <a class="portfolio-link" href="#portfolioModal7" data-toggle="modal">
+                    <div class="caption-port">
+                        <div class="caption-port-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/p-7.png" alt="">
+                </a>
+            </div>
+            <div class="col-sm-4 portfolio-item filter consulting">
+                <p>캐쉬북</p>
+                <a class="portfolio-link" href="#portfolioModal7" data-toggle="modal">
+                    <div class="caption-port">
+                        <div class="caption-port-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/p-7.png" alt="">
+                </a>
+            </div>
               <div class="col-sm-4 portfolio-item filter consulting">
+                  <p>쇼핑몰(세미프로젝트)</p>
                   <a class="portfolio-link" href="#portfolioModal7" data-toggle="modal">
                       <div class="caption-port">
                           <div class="caption-port-content">
@@ -279,8 +283,17 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                       <img class="img-fluid" src="img/portfolio/p-7.png" alt="">
                   </a>
               </div>
-           
-              
+              <div class="col-sm-4 portfolio-item filter consulting">
+                <p>LMS(파이널프로젝트)</p>
+                <a class="portfolio-link" href="#portfolioModal7" data-toggle="modal">
+                    <div class="caption-port">
+                        <div class="caption-port-content">
+                            <i class="fa fa-search-plus fa-3x"></i>
+                        </div>
+                    </div>
+                    <img class="img-fluid" src="img/portfolio/p-7.png" alt="">
+                </a>
+            </div>
           </div>
       </section>
 
