--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                 <div class="award-icon"></div>
                 <div class="award-content">
                     <span class="date">2013.03 - 2017.03</span>
-                    <h5 class="title"> 서원대학교 중퇴</h5>
+                    <h5 class="title"> 서원대학교 </h5>
                     <p class="description">
                    회계학과
                     </p>
