--- a/index.html
+++ b/index.html
@@ -162,12 +162,15 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                         SKILLS
     ======================================================-->       
    <section class=" d-flex flex-column" id="skills">
+
         <div class="p-lg-5 p-3 skill-cover">
          <h3 class="text-center text-white"> Skills</h3>
          <div class="row text-center my-auto "> 
              <div class="col-md-3 col-sm-6">
                  <div class="skill-item">
                      <i class="fa fa-html5 fa-5x"     ></i>
+                     <h2><span class="counter">  </span><span>Front-End</span></h2>
+                     <p>Html, CSS, JSP, JAVA Script, Jquery</p>
                      <h2><span class="counter">  </span><span>%</span></h2>
                      <p>HTML5</p>
                  </div>
@@ -175,6 +178,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
              <div class="col-md-3 col-sm-6">
                  <div class="skill-item" >
                      <i class="fa fa-database fa-5x"></i>
+                     <h2><span class="counter"></span><span>DataBase</span></h2>
+                     <p>MySQL, Maria DB,Oracle DB</p>
                      <h2><span class="counter"></span><span>%</span></h2>
                      <p>CSS3</p>
                  </div>
@@ -182,6 +187,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
              <div class="col-md-3 col-sm-6">
                  <div class="skill-item">
                      <i class="fa fa-code fa-5x"></i>
+                     <h2><span class="counter">  </span><span>Back-End</span></h2>
+                     <p>JAVA, Spring Framework, Mybatis</p>
                      <h2><span class="counter">  </span><span>%</span></h2>
                      <p>JQuery</p>
                  </div>
@@ -189,6 +196,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
              <!-- <div class="col-md-3 col-sm-6">
                  <div class="skill-item">
                      <i class="fa fa-bus fa-5x"></i>
+                     <h2><span class="counter"> 1 </span><span>%</span></h2>
                      <h2><span class="counter">  </span><span>%</span></h2>
                      <p>PHP</p>
                  </div> -->
