--- a/index.html
+++ b/index.html
@@ -161,40 +161,35 @@ License URL: https://creativecommons.org/licenses/by/4.0/
       <!--====================================================
                         SKILLS
     ======================================================-->       
-   <section class=" d-flex flex-column" id="skills">
-
+    <section class=" d-flex flex-column" id="skills">
         <div class="p-lg-5 p-3 skill-cover">
          <h3 class="text-center text-white"> Skills</h3>
          <div class="row text-center my-auto "> 
              <div class="col-md-3 col-sm-6">
                  <div class="skill-item">
                      <i class="fa fa-html5 fa-5x"     ></i>
-                     <h2><span class="counter">  </span><span>Front-End</span></h2>
+                     <h2><span class="counter">1  </span><span>Front-End</span></h2>
                      <p>Html, CSS, JSP, JAVA Script, Jquery</p>
-
                  </div>
              </div>
              <div class="col-md-3 col-sm-6">
                  <div class="skill-item" >
                      <i class="fa fa-database fa-5x"></i>
-                     <h2><span class="counter"></span><span>DataBase</span></h2>
+                     <h2><span class="counter">1</span><span>DataBase</span></h2>
                      <p>MySQL, Maria DB,Oracle DB</p>
-
                  </div>
              </div>
              <div class="col-md-3 col-sm-6">
                  <div class="skill-item">
                      <i class="fa fa-code fa-5x"></i>
-                     <h2><span class="counter">  </span><span>Back-End</span></h2>
+                     <h2><span class="counter"> 1 </span><span>Back-End</span></h2>
                      <p>JAVA, Spring Framework, Mybatis</p>
-
                  </div>
              </div>
              <!-- <div class="col-md-3 col-sm-6">
                  <div class="skill-item">
                      <i class="fa fa-bus fa-5x"></i>
                      <h2><span class="counter"> 1 </span><span>%</span></h2>
-                     <h2><span class="counter">  </span><span>%</span></h2>
                      <p>PHP</p>
                  </div> -->
           
@@ -235,8 +230,6 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                   </div>
                 </div>  
               </div>
-
-
           </div>
       </section>
         ======================================================-->  
