--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         <div class="my-auto" >
             <img src="img/logo-s.png" class="img-fluid mb-3" alt="">
             <h1 class="mb-0">LEE KYU RYANG
-              <span class="text-primary">Bonsen</span>
+              <span class="text-primary">introude</span>
             </h1>
-            <div class="subheading mb-5">THE NEXT BIG IDEA IS WAITING FOR ITS NEXT BIG CHANGER WITH 
+            <div class="subheading mb-5">배우고 나아가는 개발자가 되겠습니다.
                 <a href="#">THEMSBIT</a>
             </div>
             <p class="mb-5" style="max-width: 500px;" >나는 블라블라 3줄</p>
