--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <!--====================================================
                         PORTFOLIO
     ======================================================-->     
-    <--  <section class="resume-section p-3 p-lg-5 d-grid grid-column" id="portfolio"> 
+    <!--  <section class="resume-section p-3 p-lg-5 d-grid grid-column" id="portfolio"> 
           <div class="row my-auto">
               <div class="col-12">
                 <h2 class="  text-center">Portfolio</h2>
