--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
       <tbody>
         <tr>
           <td> 
-             <a class="portfolio-link" href="http://13.125.145.180/shoppingmall/MainHomeController" target="_blank"></a>
+             <a class="portfolio-link" href="http://13.125.145.180/shoppingmall/MainHomeController" target="_blank"><img class="img-fluid" src="img/portfolio/p-7.png" ></a>
 
           </td>
         </tr>
@@ -298,21 +298,20 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         </tr>             <!--  선-->
           <thead>
           <tr>
-            <td>
-            <h3 class="" algin="center"><i class=""></i> 캐쉬북</td></tr>        <!--파이날-->
+            <td>                    
+            <h3 class="" algin="center"><i class=""></i> 캐쉬북</td></tr>        <!--캐쉬북-->
         </thead>
         <tbody>
           <tr>
           <td> 
 
-            <a class="portfolio-link" href="#portfolioModal4"> <img class="img-fluid" src="img/portfolio/p-6.png" ></a>
+            <a class="portfolio-link" href="#portfolioModal4"> <img class="img-fluid" src="img/portfolio/cashbook.png" ></a>
               
           </td>
         </tr>
         <tr>
           <td>   
               <div class="resume-content mr-auto">
-            
                   <p class="text-md-left" >캐쉬북 설명: </p>                <!--캐쉬북 설명-->
               </div>
               <div class="resume-date text-md-right">
