--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
           <tr>
           <td> 
 
-            <a class="portfolio-link" href="http://13.125.145.180/blogCom/board/boardList.jsp"> <img class="img-fluid" src="img/portfolio/p-6.png" ></a>
+            <a class="portfolio-link" href="http://13.125.145.180/blogCom/board/boardList.jsp" target="_blank"> <img class="img-fluid" src="img/portfolio/p-6.png" ></a>
               
           </td>
         </tr>
