--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             <div class="subheading mb-5">배우고 나아가는 개발자가 되겠습니다.
                
             </div>
-            <p class="mb-5" style="max-width: 500px;" >안녕하세요. </p>
+            <p class="mb-5" style="max-width: 500px;" > </p>
             <li class="list-inline-item">
               <a href="https://github.com/kyuryang" target="_blank" > 
           <span class="fa-stack fa-lg">
