--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
           <td>  
               <div class="resume-content mr-auto">
                  
-                  <p class="text-md-left"    > <p>쇼핑몰 설명: </p>
+                  <p class="text-md-left"    > <p>Spring (MVC)방식을 이용해 IT 취업 전문 학원 LMS를 구현한 웹 프로젝트</p>
               </div>
               <div class="resume-date text-md-right">
                   <span class="text-primary">2022-02</span>
@@ -312,7 +312,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
         <tr>
           <td>   
               <div class="resume-content mr-auto">
-                  <p class="text-md-left" >캐쉬북 설명: </p>                <!--캐쉬북 설명-->
+                  <p class="text-md-left" >가계부</p>                <!--캐쉬북 설명-->
               </div>
               <div class="resume-date text-md-right">
                   <span class="text-primary">2022-04</span>
